tests/type-errors/no_arg_subset.arl
archetype no_arg_subset

asset et identified by cid { cid: int; }

asset e identified by eid {
	eid			: string;
	cells		: et subset;
}

action start (cl: et subset) {
	effect {
		var ev : e = { eid = "123"; cells = cl };
	}
}
